# zoon-python

./: README.md  debug_python.py  pyproject.toml
src/zoon/: __init__.py  decoder.py  encoder.py  types.py
tests/: test_decoder.py  test_encoder.py  test_roundtrip.py
