[project]
name = "zoon-format"
version = "1.0.1"
description = "ZOON - Zero Overhead Object Notation for LLM context optimization"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Carsen Klock" }]
requires-python = ">=3.10"
keywords = ["json", "llm", "tokens", "compression", "ai", "context-window"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/zoon-format/zoon"
Repository = "https://github.com/zoon-format/zoon"

[project.scripts]
zoon = "zoon.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zoon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[dependency-groups]
dev = ["pytest>=8.0.0", "tiktoken>=0.8.0"]
